# PasarGuard

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  Marzban.code-workspace  PasarGuard.code-workspace  README-fa.md  README-ru.md  README-zh-cn.md  README.md  build_dashboard.sh  cli_wrapper.sh  config.py  docker-compose.yml  install_service.sh  main.py  marzban-cli.py  package-lock.json  package.json  pasarguard-cli.py  pasarguard-tui.py  pnpm-lock.yaml  pyproject.toml  pytest.ini  start.sh  tui_wrapper.sh
.github/workflows/: api-codeql.yml  build-dev.yml  build.yml  frontend-codeql.yml  ruff-check.yml  test-database-migrations.yml
app/: __init__.py  dependencies.py
app/backend/: __init__.py  hosts.py  xray.py
app/core/: abstract_backend.py  abstract_core.py  hosts.py  manager.py  xray.py
app/dashboard/: __init__.py  orval.config.ts  package-lock.json  package.json  pnpm-lock.yaml
app/db/: __init__.py  base.py  comiles_types.py  compiles_types.py  crud.py  models.py
app/db/crud/: __init__.py  admin.py  bulk.py  core.py  dev.py  general.py  group.py  host.py  node.py  settings.py  user.py  user_template.py
app/db/migrations/: env.py
app/discord/handlers/: report.py
app/jobs/: 0_xray_core.py  cleanup_subscription_updates.py  dependencies.py  inboud.py  node_checker.py  node_stats.py  record_usages.py  remove_expired_users.py  reset_user_data_usage.py  review_users.py  send_notifications.py
app/models/: admin.py  backend.py  core.py  group.py  host.py  node.py  proxy.py  settings.py  stats.py  system.py  user.py  user_template.py  validators.py
app/node/: __init__.py  user.py
app/notification/: __init__.py  client.py
app/notification/discord/: __init__.py  admin.py  colors.py  core.py  group.py  host.py  messages.py  node.py  user.py  user_template.py  utils.py
app/notification/telegram/: __init__.py  admin.py  core.py  group.py  host.py  messages.py  node.py  user.py  user_template.py  utils.py
app/notification/webhook/: __init__.py
app/operation/: __init__.py  admin.py  backend.py  core.py  group.py  host.py  node.py  settings.py  subscription.py  system.py  user.py  user_template.py
app/routers/: __init__.py  admin.py  authentication.py  backend.py  core.py  dev.py  group.py  home.py  host.py  node.py  settings.py  subscription.py  system.py  user.py  user_template.py
app/settings/: __init__.py
app/subscription/: __init__.py  base.py  clash.py  funcs.py  links.py  outline.py  share.py  singbox.py  v2ray.py  xray.py
app/telegram/: __init__.py
app/telegram/handlers/: __init__.py  admin.py  base.py  error_handler.py  report.py  user.py
app/telegram/keyboards/: admin.py  base.py  bulk_actions.py  (+3 more)
app/templates/: __init__.py
app/utils/: crypto.py  helpers.py  jwt.py  logger.py  notification.py  report.py  responses.py  store.py  system.py
app/xray/: __init__.py  config.py  core.py  node.py  operations.py
cli/: README.md  __init__.py  admin.py  help.py  main.py  style.tcss  subscription.py  system.py  user.py  utils.py
dashboard/: .gitignore  .prettierrc.json  README.md  __init__.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.mts
dashboard/public/: service-worker.js
dashboard/src/: App.tsx  entry.client.tsx  index.css  router.tsx  sw-register.ts
tests/: conftest.py
tests/api/: __init__.py  conftest.py  test_admin.py  test_b_core.py  test_backend.py  test_c_group.py  test_core.py  test_d_host.py  test_e_user.py  test_f_user_template.py  test_g_bulk.py  test_group.py  test_h_system.py  test_host.py  test_user.py  test_user_template.py
tui/: README.md  __init__.py  admin.py  help.py  style.tcss
(+245 files in other folders)
